--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,44 @@
-name: Deploy to EC2
+name: Build and Deploy to EC2
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: SSH Deploy
+    - name: Checkout Code
+      uses: actions/checkout@v3
+
+    - name: Set up JDK
+      uses: actions/setup-java@v3
+      with:
+        java-version: '19'
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
+
+    - name: Build with Gradle
+      run: ./gradlew build -x test
+
+    - name: Build Docker Image
+      run: docker build -t myapp .
+
+    - name: Save Docker image to archive
+      run: docker save myapp | gzip > myapp.tar.gz
+
+    - name: Copy Docker image to EC2 via SCP
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.EC2_IP }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_KEY }}
+        source: "myapp.tar.gz"
+        target: "~/myapp"
+
+    - name: SSH into EC2 and run Docker container
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.EC2_IP }}
@@ -17,8 +46,6 @@ jobs:
         key: ${{ secrets.EC2_KEY }}
         script: |
           cd ~/myapp
-          git pull origin main
-          ./gradlew build -x test
-          sudo docker build -t myapp .
-          sudo docker rm -f springapp || true
-          sudo docker run -d -p 80:8080 --name springapp myapp
+          docker rm -f springapp || true
+          gunzip -c ./myapp.tar.gz | docker load
+          docker run -d -p 80:8080 --name springapp myapp
