--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=myapp
+server.port=8080
 
 spring.datasource.url=jdbc:oracle:thin:@34.64.187.159:1521/XE
 spring.datasource.username=C##hyogeun
 spring.datasource.password=gyrms15
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.initialization-mode=always
+
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
