feat: 좌석, 상영 일정 api 추가, 각 api 등록, 수정 기능 등 추가, 로그아웃 기능 추가, 예매 중 좌석 hold 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=gyrms15
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.data.redis.host= localhost
+spring.data.redis.port: 6379
