--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.application.name=moviebook
 
 server.port=8080
 
-spring.datasource.url= jdbc:oracle:thin:@34.64.187.159:1521:XE
-spring.datasource.driver-class-name= oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@34.64.187.159:1521:XE
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.username=C##hyogeun
 spring.datasource.password=gyrms15
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.data.redis.host= localhost
-spring.data.redis.port: 6379
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
